k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-backend
  namespace: taskflow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: taskflow-backend

  template:
    metadata:
      labels:
        app: taskflow-backend

    spec:
      containers:
        - name: backend

          image: 704348946409.dkr.ecr.ap-south-1.amazonaws.com/taskflow-backend:a6eecb74a5ad7c1fff1d17e2a3e82f39b3cf7620

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
