k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-frontend
  namespace: taskflow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: taskflow-frontend

  template:
    metadata:
      labels:
        app: taskflow-frontend

    spec:
      containers:
        - name: frontend
          image: 704348946409.dkr.ecr.ap-south-1.amazonaws.com/taskflow-frontend:a6eecb74a5ad7c1fff1d17e2a3e82f39b3cf7620

          ports:
            - containerPort: 80
