k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: taskflow

spec:
  selector:
    app: taskflow-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
