k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend
  namespace: taskflow

spec:
  selector:
    app: taskflow-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
